--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,11 @@
             <artifactId>ehcache</artifactId>
             <version>3.4.0</version>
         </dependency>
+        <dependency>
+            <groupId>xalan</groupId>
+            <artifactId>xalan</artifactId>
+            <version>2.7.1</version>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
