--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
             <version>2.0.6</version>
         </dependency>
         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>dubbo</artifactId>
+            <version>2.5.3</version>
+        </dependency>
+        <dependency>
             <groupId>biz.paluch.redis</groupId>
             <artifactId>lettuce</artifactId>
             <version>4.3.2.Final</version>
