--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,11 @@
             <artifactId>commons-io</artifactId>
             <version>2.6</version>
         </dependency>
+        <dependency>
+            <groupId>com.netflix.hystrix</groupId>
+            <artifactId>hystrix-core</artifactId>
+            <version>1.5.12</version>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
